# command_password_manager

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20230105220000_create_table_passwords.sql
src/: clipboard.rs  database.rs  main.rs  user_interface.rs
