[package]
name = "command_password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.23.0", features = ["full"] }
dotenvy = "0.15.6"
anyhow = "1.0"
